--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-    color: blue;
+    color: rgb(255, 0, 0);
     text-align: center;
-    background-color: rgb(83, 165, 42);
+    background-color: rgb(42, 85, 165);
 
 }
